<resources>
    <string name="app_name">SpaceXFeed</string>
    <string name="starlink_launch">Starlink Launch</string>
    <string name="sampleDate">01.01.2000</string>
    <string name="image_description">Icon of the event</string>
    <string name="next_picture">Next picture</string>
    <string name="enter_event_name">Enter event name</string>
    <string name="enter_description">Enter description</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="add_new_event">Add new event</string>
    <string name="search">Search</string>
    <string name="news">News</string>
    <string name="favourites">Favourites</string>
    <string name="information">Information</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="developer">Developer</string>
    <string name="dev_name">Yurii Yarkovich</string>
    <string name="feed">Feed</string>
    <string name="database_name">SpaceXFeedDatabase.db</string>
    <string name="space_events_table_name" translatable="false">spaceEvents</string>
</resources>