<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/newsItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_news"
        android:orderInCategory="1"
        android:title="@string/news" />
    <item
        android:id="@+id/favouritesItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_favourites"
        android:orderInCategory="2"
        android:title="@string/favourites" />
    <item
        android:id="@+id/infoItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_info"
        android:orderInCategory="3"
        android:title="@string/information" />
</menu>